--- a/frontend/styles/tailwind-input.scss
+++ b/frontend/styles/tailwind-input.scss
@@ -227,4 +227,33 @@
   .detail_info_wrapper {
     @apply flex-shrink flex-grow basis-auto p-8;
   }
+
+  .list_section{
+    ul{
+      @apply list-none p-3;
+    }
+  }
+
+  .num_format_box{
+    @apply font-mono p-[2px] px-3 border border-gray-700 rounded-[2px] ;
+  }
+
+  .order_lineItem{
+    @apply flex overflow-hidden p-2 m-2;
+    .lineItem_img_wrapper{
+      @apply w-[100px] min-w-[100px] h-[100px] overflow-hidden;
+    }
+    .lineItem_info{
+      @apply flex-grow;
+    }
+  }
+
+  .section_heading{
+    @apply font-thin text-[1.5rem] leading-[1.7rem] mb-4 uppercase;
+
+    font-family: "Quicksand", sans-serif; 
+    font-optical-sizing: auto;
+    font-weight: 100;
+    font-style: normal;
+  }
 } /* #shopify-react-root */
