--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -11,7 +11,8 @@
       <link
         rel="icon"
         type="image/png"
-        href="{{ settings.favicon | image_url: width: 32, height: 32 }}">
+        href="{{ settings.favicon | image_url: width: 32, height: 32 }}"
+      >
     {%- endif -%}
 
     {%- unless settings.type_body_font.system? -%}
@@ -20,7 +21,8 @@
         as="font"
         href="{{ settings.type_body_font | font_url }}"
         type="font/woff2"
-        crossorigin>
+        crossorigin
+      >
     {%- endunless -%}
     {%- unless settings.type_header_font.system? -%}
       <link
@@ -28,7 +30,8 @@
         as="font"
         href="{{ settings.type_header_font | font_url }}"
         type="font/woff2"
-        crossorigin>
+        crossorigin
+      >
     {%- endunless -%}
 
     <title>
@@ -58,12 +61,12 @@
 
     {% style %}
       {{ settings.type_body_font | font_face: font_display: 'swap' }}{{ body_font_bold | font_face: font_display: 'swap' }}{{ body_font_italic | font_face: font_display: 'swap' }}{{ body_font_bold_italic | font_face: font_display: 'swap' }}{{ settings.type_header_font | font_face: font_display: 'swap' }}:root {
-        --font-body-family: {{ settings.type_body_font.family }}, 
+        --font-body-family: {{ settings.type_body_font.family }},
         {{ settings.type_body_font.fallback_families }};
         --font-body-weight: {{ settings.type_body_font.weight }};
         --font-body-weight-bold: {{ settings.type_body_font.weight | plus: 300 | at_most: 1000 }};
 
-        --font-heading-family: {{ settings.type_header_font.family }}, 
+        --font-heading-family: {{ settings.type_header_font.family }},
         {{ settings.type_header_font.fallback_families }};
         --font-heading-weight: {{ settings.type_header_font.weight }};
 
@@ -78,6 +81,13 @@
         {{ settings.colors_accent.blue }};
       }
     {% endstyle %}
+
+    {% comment %} Google webfonts for react app {% endcomment %}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    {% comment %} END: Google webfonts for react app {% endcomment %}
+
 
     {%- liquid
       render 'vite-tag' with 'theme.css', preload_stylesheet: true
@@ -99,7 +109,10 @@
     {% comment %} react entry point {% endcomment %}
     <div id="shopify-react-root"></div>
 
-    <a href="#MainContent" class="button sr-only bg-primary text-contrast focus:not-sr-only focus:absolute focus:z-50 focus:px-6 focus:py-3">
+    <a
+      href="#MainContent"
+      class="button sr-only bg-primary text-contrast focus:not-sr-only focus:absolute focus:z-50 focus:px-6 focus:py-3"
+    >
       {{ 'accessibility.skip_to_text' | t }}
     </a>
 
@@ -111,7 +124,8 @@
     <main
       role="main"
       id="MainContent"
-      tabindex="-1">
+      tabindex="-1"
+    >
       {{ content_for_layout }}
     </main>
 
@@ -138,7 +152,7 @@
         soldOut: `{{ 'products.product.sold_out' | t }}`,
         unavailable: `{{ 'products.product.unavailable' | t }}`
       }
-  </script>
+    </script>
 
     {% comment %} Assets Folder Path {% endcomment %}
     {% assign anyImg = 'empty.jpg' %}
@@ -156,6 +170,5 @@
         ]
       }
     </script>
-
   </body>
 </html>
